Final touches UQ presentation

--- a/Long_Reads_QLD/Long_Reads_QLD.Rmd
+++ b/Long_Reads_QLD/Long_Reads_QLD.Rmd
@@ -18,7 +18,7 @@ output:
 ## Beyond Short Reads
 
 .pull-left[
-.large[Benefits]
+.large[**Benefits**]
 * Long-range haplotyping.
 * Methylation with single-molecule level sequencing.
 * Scaffolding and genome assembly
@@ -26,7 +26,7 @@ output:
 ]
 
 .pull-right[
-.large[Platforms]
+.large[**Platforms**]
 * ONT <img src=./images/ont_logo.jpg width=20%>
 * PacBio <img src=./images/pb_logo.png width=20%>
 ]
@@ -59,6 +59,8 @@ More commonly long-reads are known for resolving scaffolds for genome assembly. 
 
 ???
 
+If you put in crap you will get out crap. Long-read sequencing technology can still process short-reads without fail however this will cause issues with your yield and your base n50.
+
 ---
 
 class: long-slide
@@ -67,17 +69,12 @@ class: long-slide
 
 * Novel file types 
   + multi-fast5s
-  + unaligned BAMs
-
-* Many ways to do one thing, benchmarking needed.
-
-* Getting help and resources, community still in development.
-
-* Denovo assemblies have always been really hard.
+  + unaligned BAMs<br></br>
+* Many ways to do one thing, benchmarking needed.<br></br>
+* Getting help and resources, community still in development.<br></br>
+* Denovo assemblies have always been really hard.<br></br>
 
 ???
-
-Class: ALL
 
 Notes:
 
@@ -203,7 +200,8 @@ class: ont-slide
 **Financial**
 * Minimal start-up cost
 * Cheap for small uses of data
-* Relatively expensive per base
+* Relatively expensive per base<br></br>
+<img src='images/minion.png' width=40%>
 ]
 
 ???
@@ -303,9 +301,9 @@ class: ont-slide
 ## Porechop, Filtlong, Unicycler
 
 Ryan Wick's repos set for:
-* [Demultiplexing / Trimming Adapters](https://github.com/rrwick/porechop)
-* [Removing poor quality reads](https://github.com/rrwick/filtlong)
-* [Generating Circular-hybrid assemblies](https://github.com/rrwick/unicycler)
+* [Demultiplexing / Trimming Adapters](https://github.com/rrwick/porechop)<br></br>
+* [Removing poor quality reads](https://github.com/rrwick/filtlong)<br></br>
+* [Generating Circular-hybrid assemblies](https://github.com/rrwick/unicycler)<br></br>
 
 ???
 
@@ -324,7 +322,7 @@ Jared T. Simpson's [nanopolish](https://github.com/jts/nanopolish) uses signal-l
 
 ???
 
-While fast5 data is clunky heavy and not user friendly, this doesn't mean you should through it a
+While fast5 data is clunky heavy and not user friendly, this doesn't mean you should throw it away, the squiggle information can be used in downstream information for methylation calling and polishing of alignments.
 
 ---
 
@@ -346,7 +344,6 @@ class: ont-slide
 
 ???
 
-NANOPORE SPECIFIC
 
 ---
 
@@ -359,7 +356,7 @@ class: ont-slide
 ]
 
 .pull-left[
-[BioRxiv Paper](https://www.biorxiv.org/content/early/2018/10/17/445924)
+[NAR Paper](https://academic.oup.com/nar/article/47/8/e46/5356940)
 ]
 .pull-right[
 [Scott's GitHub Haplotype-Methylome Repo](https://github.com/scottgigante/haplotyped-methylome)
@@ -581,7 +578,7 @@ class: long-slide
 
 .pull-right[
 .baby-bear[
-* Each are derivatives of similar approaches to assembly.
+* Each are derivatives from one of two methodologies.
 * Two main approaches are:
   + Overlap-layout-consensus
   + kmer-based approach
@@ -767,6 +764,10 @@ class: long-slide
 * Copy number variation.
 ]
 
+???
+
+Incomplete assemblies aren't completely useless, they can be useful for finding SNPs in a genome along with genome quantification.
+
 ---
 
 class: long-slide
@@ -819,9 +820,9 @@ PacBio also look forward to beyond the Sequel with the Sequel II, which is expec
 
 ## Other interesting things
 
-[Working with Singularity.](https://alexiswl.github.io/presentations/HPC_and_Singularity/HPC_Singularity_Presentation.html)
-[Working with Vagrant.](https://alexiswl.github.io/presentations/Creating_A_Vagrant_Box/Creating_A_Vagrant_Box.html)
-SMRTLINK On Demand (coming soon) - [email me](mailto: Alexis.Lucattini@agrf.org.au) in the interim and I'll give you a brief on how to set it up on your HPC
+* [Working with Singularity.](https://alexiswl.github.io/presentations/HPC_and_Singularity/HPC_Singularity_Presentation.html)
+* [Working with Vagrant.](https://alexiswl.github.io/presentations/Creating_A_Vagrant_Box/Creating_A_Vagrant_Box.html)
+* SMRTLINK On Demand (coming soon) - [email me](mailto: Alexis.Lucattini@agrf.org.au) in the interim and I'll give you a brief on how to set it up on your HPC
 
 
 ???
@@ -831,6 +832,8 @@ Singularity.
 Vagrant.
 
 ---
+
+## Thank you
 
 .pull-left[
 .baby-bear[
@@ -846,7 +849,7 @@ Vagrant.
 * Accounts:
     + Desley Pitcher
     + Claire Story
-    + Saurabh Shrivastava<br></br>
+    + Saurabh Shrivastava
 ]
 ]
 .pull-right[
